--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = MooseX-Worm
+name    = MooseX-SetOnce
 author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
