more dist.ini goodness

--- a/dist.ini
+++ b/dist.ini
@@ -8,3 +8,33 @@ copyright_holder = Ricardo SIGNES
 [RemovePrereqs]
 remove = Apple
 remove = Orange
+
+[InstallGuide]
+[Git::Describe]
+
+[NoTabsTests]
+[EOLTests]
+[Test::Compile]
+[Test::CPAN::Changes]
+[Test::ChangesHasContent]
+[MetaTests]
+
+[Test::CheckDeps]
+:version = 0.005
+fatal = 1
+
+[Git::Remote::Check]
+remote_branch = master
+
+[Git::Check]
+allow_dirty =
+
+[Git::CheckFor::CorrectBranch]
+:version = 0.004
+release_branch = master
+release_branch = stable
+
+[InstallRelease]
+install_command = cpanm .
+
+[Clean]
