prep next release

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = MooseX-SetOnce
-author  = Ricardo SIGNES <rjbs@cpan.org>
+author  = Ricardo SIGNES <rjbs@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
