prep next release, update author info

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Ricardo SIGNES
 
 [@RJBS]
-perl-support = long-term
+perl-window = long-term
 
 [RemovePrereqs]
 remove = Apple
